--- a/css/index.css
+++ b/css/index.css
@@ -119,7 +119,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 table {
@@ -130,7 +130,109 @@ table {
 * {
   box-sizing: border-box;
 }
+html {
+  font-size: 62.5%;
+}
 html,
 body {
   height: 100%;
+}
+.container {
+  max-width: 900px;
+  margin: auto;
+}
+header nav {
+  display: flex;
+  justify-content: flex-end;
+  font-family: "Montserrat", sans-serif;
+}
+header nav a {
+  padding: 3rem 2rem;
+  text-decoration: none;
+  color: black;
+  font-size: 1.6rem;
+}
+.top-content {
+  background-color: lightgray;
+  border-radius: 0.5rem;
+  padding-bottom: 8rem;
+  margin-left: 2.5rem;
+}
+.top-content img {
+  width: 20%;
+  height: 25%;
+  margin-top: 5rem;
+  margin-left: 2.5rem;
+  border-radius: 2rem;
+}
+.top-content h1 {
+  font-size: 4rem;
+  padding-left: 2.5rem;
+  font-family: "Montserrat", sans-serif;
+}
+.top-content h2 {
+  font-size: 1.5rem;
+  padding: 1.5rem 2.5rem;
+  font-family: "Montserrat", sans-serif;
+}
+.top-content hr {
+  width: 870px;
+  float: right;
+}
+.top-content p {
+  font-size: 1.3rem;
+  margin-left: 2.5rem;
+  padding: 2rem 0;
+  font-family: "Montserrat", sans-serif;
+}
+.top-content button {
+  margin-left: 2.5rem;
+  background-color: #696969;
+  color: white;
+  padding: 1rem 1.5rem;
+  border-radius: 1rem;
+  font-size: 1.8rem;
+  font-family: "Montserrat", sans-serif;
+}
+.middle-content {
+  display: flex;
+  margin: 2.5rem 0 2rem 2.5rem;
+}
+.middle-content .middle {
+  width: 450px;
+  margin-right: 4rem;
+}
+.middle-content .middle h3 {
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+}
+.middle-content .middle p {
+  font-size: 1.8rem;
+  line-height: 2.5rem;
+  font-family: "Montserrat", sans-serif;
+}
+.middle-content .middle2 {
+  width: 450px;
+}
+.middle-content .middle2 h3 {
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+}
+.middle-content .middle2 ul {
+  font-size: 1.8rem;
+  font-family: "Montserrat", sans-serif;
+}
+.middle-content .middle2 ul li {
+  border: 1px solid #dcdcdc;
+  padding: 1.5rem;
+}
+.middle-content .middle2 ul li:nth-child(1) {
+  border-radius: 1.2rem 0 0 0;
+}
+.middle-content .middle2 ul li:nth-child(5) {
+  border-radius: 0 0 0 1.2rem;
 }
