--- a/less/index.less
+++ b/less/index.less
@@ -4,56 +4,269 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
+.font() {
+  font-family: "Montserrat", sans-serif;
+}
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
+html {
+  font-size: 62.5%;
 }
 
+html,
+body {
+  height: 100%;
+}
+
+.container {
+  max-width: 900px;
+  margin: auto;
+}
+
+header {
+  nav {
+    display: flex;
+    justify-content: flex-end;
+    .font;
+
+    a {
+      padding: 3rem 2rem;
+      text-decoration: none;
+      color: black;
+      font-size: 1.6rem;
+    }
+  }
+}
+
+.top-content {
+  background-color: lightgray;
+  border-radius: 0.5rem;
+  padding-bottom: 8rem;
+  margin-left: 2.5rem;
+
+  img {
+    width: 20%;
+    height: 25%;
+    margin-top: 5rem;
+    margin-left: 2.5rem;
+    border-radius: 2rem;
+  }
+
+  h1 {
+    font-size: 4rem;
+    padding-left: 2.5rem;
+    .font;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    padding: 1.5rem 2.5rem;
+    .font;
+  }
+}
+
+.top-content {
+  hr {
+    width: 870px;
+    float: right;
+  }
+
+  p {
+    font-size: 1.3rem;
+    margin-left: 2.5rem;
+    padding: 2rem 0;
+    .font;
+  }
+
+  button {
+    margin-left: 2.5rem;
+    background-color: #696969;
+    color: white;
+    padding: 1rem 1.5rem;
+    border-radius: 1rem;
+    font-size: 1.8rem;
+    .font;
+  }
+}
+
+.middle-content {
+  display: flex;
+  margin: 2.5rem 0 2rem 2.5rem;
+  .middle {
+    width: 450px;
+    margin-right: 4rem;
+
+    h3 {
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
+      font-weight: 700;
+      .font;
+    }
+
+    p {
+      font-size: 1.8rem;
+      line-height: 2.5rem;
+      .font;
+    }
+  }
+}
+
+.middle-content {
+  .middle2 {
+    width: 450px;
+
+    h3 {
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
+      font-weight: 700;
+      .font;
+    }
+
+    ul {
+      font-size: 1.8rem;
+      .font;
+
+      li {
+        border: 1px solid #dcdcdc;
+        padding: 1.5rem;
+      }
+
+      li:nth-child(1) {
+        border-radius: 1.2rem 0 0 0;
+      }
+
+      li:nth-child(5) {
+        border-radius: 0 0 0 1.2rem;
+      }
+    }
+  }
+}
