--- a/less/index.less
+++ b/less/index.less
@@ -311,6 +311,14 @@ header {
   }
 }
 
+.table {
+  table {
+    td {
+      text-align: center;
+    }
+  }
+}
+
 footer {
   margin: 3rem 0;
   padding: 3rem;
@@ -335,7 +343,4 @@ footer {
     text-align: center;
     color: white;
   }
-}
-
-@media (max-width: 500px) {
 }
