--- a/less/index.less
+++ b/less/index.less
@@ -140,6 +140,10 @@ table {
   margin-left: 2.5rem;
 }
 
+.hover() {
+  background-color: #696969;
+}
+
 // Variables
 @button-color: #696969;
 @footer-color: #696969;
@@ -162,6 +166,12 @@ body {
   margin: auto;
 }
 
+@media (max-width: 500px) {
+  .container {
+    margin: auto;
+  }
+}
+
 header {
   nav {
     display: flex;
@@ -173,6 +183,19 @@ header {
       text-decoration: none;
       color: black;
       font-size: 1.6rem;
+    }
+
+    a:hover {
+      .hover;
+    }
+  }
+}
+
+header {
+  @media (max-width: 500px) {
+    nav {
+      flex-direction: column;
+      align-items: center;
     }
   }
 }
@@ -228,12 +251,29 @@ header {
   }
 }
 
+.top-content {
+  @media (max-width: 500px) {
+    top-content {
+      width: 100%;
+    }
+
+    hr {
+      width: 430px;
+    }
+  }
+}
+
 .middle-content {
   display: flex;
   margin: 2.5rem 0 2rem 2.5rem;
   .middle {
     width: 450px;
     margin-right: 4rem;
+
+    @media (max-width: 500px) {
+      margin-bottom: 3rem;
+      margin-right: 0px;
+    }
 
     h3 {
       font-size: 2.5rem;
@@ -248,11 +288,21 @@ header {
       .font;
     }
   }
+
+  @media (max-width: 500px) {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+  }
 }
 
 .middle-content {
   .middle2 {
     width: 450px;
+
+    @media (max-width: 500px) {
+      margin-bottom: 3rem;
+    }
 
     h3 {
       font-size: 2.5rem;
@@ -317,6 +367,10 @@ header {
       text-align: center;
     }
   }
+
+  @media (max-width: 500px) {
+    width: 85%;
+  }
 }
 
 footer {
@@ -342,5 +396,11 @@ footer {
     .font;
     text-align: center;
     color: white;
+  }
+
+  @media (max-width: 500px) {
+    width: 85%;
+    padding: 3rem 0;
+    .margin;
   }
 }
